day01 assignment complete

--- a/ML_Day01_Assignment.ipynb
+++ b/ML_Day01_Assignment.ipynb
@@ -2603,15 +2603,15 @@
       "metadata": {
         "id": "VdGFDH_0LhqW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfb160fa-1dd6-4f04-cc63-c7dc9ecd81da"
+        "outputId": "b1440024-8761-498b-efb8-ce0e5800c823"
       },
       "source": [
-        "\n"
+        "\n",
+        "7**4 # 7 to the power of 4 is 2401"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2620,10 +2620,8 @@
               "2401"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     },
@@ -2645,20 +2643,34 @@
       "metadata": {
         "id": "cKJViz-VLhqd"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "lst = \"Hi there Sam!\".split(\" \")"
+      ],
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZlAuQZQnLhqg"
+        "id": "ZlAuQZQnLhqg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "513bc45c-ae85-4fec-c418-e8f46d8ed8ba"
       },
       "source": [
         "print(lst)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hi', 'there', 'Sam!']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2685,24 +2697,36 @@
         "planet = \"Earth\"\n",
         "diameter = 12742"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "UDa7OomKLhqr",
-        "outputId": "535a16ef-9ad0-4948-f0ae-38f9739ce76c"
+        "outputId": "f5f1b3f4-0d93-43eb-952f-e0e51d9b788b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "\"The diameter of {} is {} kilometers.\".format(planet,diameter)"
+      ],
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "The diameter of Earth is 12742 kilometers.\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'The diameter of Earth is 12742 kilometers.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -2723,29 +2747,32 @@
       "source": [
         "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "gckLdZpvLhq2",
-        "outputId": "8aa55d0b-0443-44a5-fdcb-39e7a590dccc"
+        "outputId": "3af19050-5c27-4271-f797-f946cf8dc868",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "lst[3][1][2]"
+      ],
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'hello'"
+              "['hello']"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
@@ -2766,29 +2793,36 @@
       "source": [
         "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ztke2oMdLhq9",
-        "outputId": "3c980c77-ccc2-447c-ab3c-b4e32f708b4e"
+        "outputId": "bf3b2488-2ae3-4249-95a7-f92886d4a1a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "d['k1'][3]['tricky'][3]['target'][3]"
+      ],
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'hello'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
@@ -2804,11 +2838,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dZ9yohzdLhrD"
+        "id": "dZ9yohzdLhrD",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "outputId": "b9fb2abf-d1b7-4480-c9f3-16c212febbf2"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "# List is mutable i.e. values can be added to or removed from the tuple where as in a list a no values can be added or removed\n",
+        "x = (1,2,3,4)\n",
+        "y=[1,2,3,4]\n",
+        "y[0]=\"hellow\"\n",
+        "print(y)\n",
+        "x[0]=\"hellow\"     # --> ERROR\n",
+        "print(x) "
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['hellow', 2, 3, 4]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-1e7185f5c6c6>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"hellow\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"hellow\"\u001b[0m     \u001b[0;31m# --> ERROR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2828,32 +2894,45 @@
       "metadata": {
         "id": "Sb6t2bGqLhrJ"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def domainGet(name) :\n",
+        "  for i,v in enumerate(name) :\n",
+        "    if v == \"@\" :\n",
+        "      return name[i+1:]\n",
+        "    else :\n",
+        "      pass\n",
+        "    "
+      ],
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2q-CI4HFLhrM",
-        "outputId": "c508b0d8-972d-42be-be48-d1ee14d8bd7f"
+        "outputId": "95a6ff5e-47d2-4e69-e325-bd981a0be1f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
       },
       "source": [
         "domainGet('user@domain.com')"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'domain.com'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
@@ -2871,20 +2950,29 @@
       "metadata": {
         "id": "Bwj55OAlLhrQ"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def findDog(input) :\n",
+        "  if 'dog' in input.lower() :\n",
+        "    return True\n",
+        "  else :\n",
+        "    return False"
+      ],
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "UGkF5o4RLhrS",
-        "outputId": "75938314-e5c2-4ea7-e181-9745e56f84e3"
+        "outputId": "9b3a2458-80c6-4cb4-c30f-f6497a822115",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "findDog('Is there a dog here?')"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2893,10 +2981,8 @@
               "True"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     },
@@ -2914,20 +3000,29 @@
       "metadata": {
         "id": "oh2tJWWuLhrZ"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "import re\n",
+        "def countDog(input) :\n",
+        "  regex = re.compile(r'dog')\n",
+        "  lis = regex.findall(input)\n",
+        "  return len(lis)"
+      ],
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HA25yPbMLhrb",
-        "outputId": "669a658d-8bcc-466c-86da-4538ce3e4794"
+        "outputId": "83f3ba7d-7c9f-4afa-f571-210bbc90b336",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "countDog('This dog runs faster than the other dog dude!')"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2936,10 +3031,8 @@
               "2"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
+          "metadata": {},
+          "execution_count": 40
         }
       ]
     },
@@ -2966,29 +3059,29 @@
       "source": [
         "seq = ['soup','dog','salad','cat','great']"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "hiRv7J0LLhrh",
-        "outputId": "be280fb2-3d27-4c43-c9b5-223cae2e103b"
+        "outputId": "999ffc82-799e-4cd9-bc5d-3e31053ddaf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "print(list(filter(lambda x: (x[0]=='s'), seq)))"
+      ],
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['soup', 'salad']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['soup', 'salad']\n"
+          ]
         }
       ]
     },
@@ -3013,33 +3106,45 @@
       },
       "source": [
         "def caught_speeding(speed, is_birthday):\n",
-        "    pass"
+        "  if is_birthday :\n",
+        "    speed-=5\n",
+        "  if speed < 60 :\n",
+        "    return 'No Ticket'\n",
+        "  elif speed>=61 and speed <=80 :\n",
+        "    return 'Small Ticket'\n",
+        "  elif speed>=81 :\n",
+        "    return 'Big Ticket'"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OMk313P0Lhrq",
-        "outputId": "5be26cd3-3811-485c-ac5b-118bb4f3fec5"
+        "outputId": "ce439426-f29b-4fdc-f956-00b046b07aa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
       },
       "source": [
         "caught_speeding(81,True)"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'Small Ticket'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 42
+          "metadata": {},
+          "execution_count": 64
         }
       ]
     },
@@ -3047,26 +3152,40 @@
       "cell_type": "code",
       "metadata": {
         "id": "uZX9rtG5Lhrt",
-        "outputId": "990fe6a3-e2aa-493f-9ffa-e09618889424"
+        "outputId": "ee07d460-959a-44b8-8df8-7f0d42eb5692",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
       },
       "source": [
         "caught_speeding(81,False)"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'Big Ticket'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 43
+          "metadata": {},
+          "execution_count": 65
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ALL ASSIGNMENTS COMPLETED !!!"
+      ],
+      "metadata": {
+        "id": "bnUnXVfr7WDI"
+      }
     }
   ]
 }
