--- a/ML_Day04_Assignment.ipynb
+++ b/ML_Day04_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnZ2Ig5tIOYzS8Wd6CzCMJ",
+      "authorship_tag": "ABX9TyPfgKllRt3nsRyrvIua5oxK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,12 +37,12 @@
       "metadata": {
         "id": "e1xdgi7RAO56"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "gNBNRfYo_jS3"
       },
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "rOU5QCr43SDY"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "id": "dBC-oqX2AiRE",
         "outputId": "5bbb7026-29e1-478b-80f9-c04fdcafbcd8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +317,7 @@
         "id": "VeFu9LNNAlP-",
         "outputId": "ffc1177d-aa06-4c43-9089-fff7084f8c20"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
       "metadata": {
         "id": "cLazWH2ZAs68"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
         "id": "txFzblh3B0ya",
         "outputId": "b34e56b9-2ad5-46d6-e3b8-47abc652f739"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +619,7 @@
         "id": "PJ0-ItHND56o",
         "outputId": "40bce7cc-237f-465f-91e9-65195841e4ae"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -872,7 +872,7 @@
         "id": "JnXEDBqwEbDd",
         "outputId": "bad35367-3561-49e1-f31c-7ec13712f4c9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,7 +1110,7 @@
       "metadata": {
         "id": "a4CsMrkLEgHG"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1125,7 +1125,7 @@
         "id": "vRjnl9RdElzL",
         "outputId": "79b73611-8732-4ef4-b742-0b29809bf37a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1147,7 +1147,7 @@
       "metadata": {
         "id": "9j7mPXirEsha"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1163,7 +1163,7 @@
         "id": "rX5_MyasEzWn",
         "outputId": "5807568c-1197-4c67-acc9-0798a234359b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1412,7 +1412,7 @@
         "id": "jDr4XXVvE4aD",
         "outputId": "f454a3c1-756e-4691-87e8-61666064003d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1878,7 +1878,7 @@
         "id": "Su4xlIm3FA5X",
         "outputId": "7a77f18d-106b-47a6-ba26-14332a1d4cfe"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1915,7 +1915,7 @@
         "id": "LKdAorEeFzr2",
         "outputId": "94a547fd-397a-4fe2-bd4d-7cd5d9657b09"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1952,7 +1952,7 @@
         "id": "YFBprK2dGe2h",
         "outputId": "0583c6ca-e4e9-434f-b81a-87e8f32df68e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1977,6 +1977,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The above scatter plot tells us that the people in the age group of 50-70 have the maximum heart rate around 140-180"
+      ],
+      "metadata": {
+        "id": "6P-5dPlnjEex"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.pairplot(data_1,hue='fbs')"
@@ -1989,7 +1998,7 @@
         "id": "aAcxZnAKJOV4",
         "outputId": "20a6da43-4b2d-4862-bc04-deb4dbc4fa74"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
