--- a/ML_Day08_Assignment.ipynb
+++ b/ML_Day08_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUlu9JUrghBn0nLU9dohAz",
+      "authorship_tag": "ABX9TyN/QTeBfMBl811KVcLP3vvm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TzTENU390fOa"
       },
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "THMBLwKZ0qPa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
         "id": "Fnwl9QyxsOXT",
         "outputId": "ce3eec20-7d20-434d-dd09-c7dea9351514"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "1nbiXlB40sS4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -317,7 +317,7 @@
         "id": "eMe4A55dsGt1",
         "outputId": "ed0f37d1-b428-4c2a-d1a6-df9760df70c1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -344,7 +344,7 @@
       "metadata": {
         "id": "NkHCDk3l0uCK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
         "id": "bd90AeqJsLFx",
         "outputId": "64015982-066b-4640-f79e-3b2382690a5b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,7 +592,7 @@
       "metadata": {
         "id": "aumBLidq0v_5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +607,7 @@
         "id": "CSQ0qcrjsRKX",
         "outputId": "07c476e2-fc8f-4445-d865-96e09394fe18"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +630,7 @@
         "id": "iRMBoTT_seDo",
         "outputId": "e2d175ad-fbef-45e5-ca63-9ee8506cdd65"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +653,7 @@
         "id": "x7yZzXcdsg6z",
         "outputId": "5828cf46-aba3-4b74-c3af-09e6fe3a0efb"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +676,7 @@
         "id": "nOdusoVeskPR",
         "outputId": "251fa333-a70f-427f-ea0f-dfd216cd481c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +730,7 @@
         "id": "3M5jO8qN1ZY0",
         "outputId": "052b0a04-f073-4df2-d7e7-e6efcb4e02f9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +749,7 @@
       "metadata": {
         "id": "GwHwPg_c1frY"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -765,7 +765,7 @@
         "id": "AhRysmlc1ty5",
         "outputId": "d309b062-5e86-4e92-846f-299bcfa04040"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +819,7 @@
         },
         "outputId": "a3c078f8-ec99-47ce-f00a-f4c53da8a788"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +851,7 @@
         "id": "_N70wHAN3Kkn",
         "outputId": "2250e0dc-9164-4c5e-c174-6dce0a0ede23"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +870,7 @@
       "metadata": {
         "id": "dNS7-ZmJ4UOA"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -886,7 +886,7 @@
         "id": "gKQGfawP4ZJP",
         "outputId": "4ea65fc5-64af-4bb3-acad-15a6b596d6fa"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +928,7 @@
       "metadata": {
         "id": "2mlCQMVb45hQ"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,7 +965,7 @@
         },
         "outputId": "fed885a3-5e31-41fe-d48f-40dfa251ac9b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,7 +984,7 @@
       "metadata": {
         "id": "Xs6CF9c05YcL"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +1000,7 @@
         "id": "EGBtJBH45a67",
         "outputId": "c6c4ae40-dc3e-4ff8-8591-3543e034c3cd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
         "id": "EdVkEqhWM4RK",
         "outputId": "d2286a53-44ed-4818-85b2-511e54c6053d"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,7 +1084,7 @@
         "id": "IyNoGd1NM_TR",
         "outputId": "52998b66-d045-468b-94b4-db025e9830ed"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1124,7 +1124,7 @@
         "id": "ccILjF_sNIxo",
         "outputId": "405b5026-5917-4520-fbcb-030deee1ed21"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1151,7 +1151,7 @@
         "id": "DTo5NRlGdn2O",
         "outputId": "42c78fd4-ba19-476d-ff03-0e5af3a9dd6c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1191,7 @@
         "id": "q7l9Tc5Udqm3",
         "outputId": "382a938a-f97c-4caf-d6b0-1e37791b003b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1218,7 +1218,7 @@
         "id": "x2ND8h9pd0wk",
         "outputId": "25397fd4-7f71-4d28-bd66-9eb6742d03b2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1265,7 +1265,7 @@
       "metadata": {
         "id": "bbq-u_9zm9QL"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1279,7 @@
       "metadata": {
         "id": "O4NdwSVinP45"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1294,7 +1294,7 @@
       "metadata": {
         "id": "-IDHAct0nlwD"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1322,7 @@
         "id": "Abdkl4FBn_Ky",
         "outputId": "0e040ce1-dcd4-4366-821a-3bb1c85c419f"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1367,7 +1367,7 @@
         "id": "zwM4GFhipGMp",
         "outputId": "e7ffcd53-6ab1-4344-9769-ecf9f42f0a08"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1401,35 +1401,35 @@
     {
       "cell_type": "code",
       "source": [
-        "from pandas.core.window.expanding import ExpandingGroupby\n",
-        "from matplotlib.projections.polar import ThetaAxis\n",
-        "n = int(input(\"Enter no of Patients who's Status is to be Determined :- \"))\n",
+        "# from pandas.core.window.expanding import ExpandingGroupby\n",
+        "# from matplotlib.projections.polar import ThetaAxis\n",
+        "# n = int(input(\"Enter no of Patients who's Status is to be Determined :- \"))\n",
         "\n",
-        "def Prediction() :\n",
-        "  age = int(input(\"Age of the Patient :- \"))\n",
-        "  sex = int(input(\"Sex of the Patient (0 - female & 1 - male) :- \"))\n",
-        "  cp = int(input(\"Chest Pain Type :- \"))\n",
-        "  trestbps = int(input(\"Resting Blood Pressure :- \"))\n",
-        "  chol = int(input(\"Serum Cholestrol :- \"))\n",
-        "  fbs = int(input(\"Fasting Blood Sugar :- \"))\n",
-        "  restecg = int(input(\"Resting ElectroCardiographic Result :- \"))\n",
-        "  thalach = int(input(\"Maximum Heart Rate Achieved :- \"))\n",
-        "  exang = int(input(\"Exercise-include angina (1 - True, 0 - False) :- \"))\n",
-        "  oldpeak = float(input(\"ST Depression induced by Exercise relative to Rest :- \"))\n",
-        "  slope = int(input(\"Slope of Peak Exercise ST segment :- \"))\n",
-        "  ca = int(input(\"No. of Major Vessels (0-3) :- \"))\n",
-        "  thal = int(input(\"Thalasemia Indicator :- \"))\n",
-        "  new_patient = np.array([age, sex, cp, trestbps, chol, fbs, restecg, thalach, exang, oldpeak, slope, ca, thal])\n",
+        "# def Prediction() :\n",
+        "#   age = int(input(\"Age of the Patient :- \"))\n",
+        "#   sex = int(input(\"Sex of the Patient (0 - female & 1 - male) :- \"))\n",
+        "#   cp = int(input(\"Chest Pain Type :- \"))\n",
+        "#   trestbps = int(input(\"Resting Blood Pressure :- \"))\n",
+        "#   chol = int(input(\"Serum Cholestrol :- \"))\n",
+        "#   fbs = int(input(\"Fasting Blood Sugar :- \"))\n",
+        "#   restecg = int(input(\"Resting ElectroCardiographic Result :- \"))\n",
+        "#   thalach = int(input(\"Maximum Heart Rate Achieved :- \"))\n",
+        "#   exang = int(input(\"Exercise-include angina (1 - True, 0 - False) :- \"))\n",
+        "#   oldpeak = float(input(\"ST Depression induced by Exercise relative to Rest :- \"))\n",
+        "#   slope = int(input(\"Slope of Peak Exercise ST segment :- \"))\n",
+        "#   ca = int(input(\"No. of Major Vessels (0-3) :- \"))\n",
+        "#   thal = int(input(\"Thalasemia Indicator :- \"))\n",
+        "#   new_patient = np.array([age, sex, cp, trestbps, chol, fbs, restecg, thalach, exang, oldpeak, slope, ca, thal])\n",
         "\n",
-        "  new_patient = new_patient.reshape(1,-1) #converting to 2D array\n",
+        "#   new_patient = new_patient.reshape(1,-1) #converting to 2D array\n",
         "\n",
-        "  if clf_lr.predict(new_patient) == 0 :\n",
-        "    return \"The Patient with the above provided Vitals Dies!!!\"\n",
-        "  else :\n",
-        "    return \"The Patient with the above provided vitals Lives!!!\"\n",
+        "#   if clf_lr.predict(new_patient) == 0 :\n",
+        "#     return \"The Patient with the above provided Vitals Dies!!!\"\n",
+        "#   else :\n",
+        "#     return \"The Patient with the above provided vitals Lives!!!\"\n",
         "\n",
-        "for i in range(n) :\n",
-        "  print(Prediction())"
+        "# for i in range(n) :\n",
+        "#   print(Prediction())"
       ],
       "metadata": {
         "colab": {
@@ -1438,7 +1438,7 @@
         "id": "v3S1EEwjpxwV",
         "outputId": "138b37c9-628b-4385-8465-e2eef5353748"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
